@@ -4,6 +4,7 @@
 	* Invoke sh_error on error in copyfd.
 	* Use dup2 instead of copyfd in evalbackcmd.
 	* Replace copyfd by savefd and dup2.
+	* Removed redundant CLOEXEC calls.
 
 2007-05-05  Herbert Xu <herbert@gondor.apana.org.au>
 
